syntax = "proto3";

package go.micro.srv.user;

service UserService {
    rpc Create(User) returns (CreateResponse) {}
    rpc Get(User) returns (UserResponse) {}
    rpc GetAll(Request) returns (UsersResponse) {}
    rpc Auth(User) returns (Token) {}
    rpc ValidateToken(Token) returns (Token) {}
}

message User {
    string id = 1;
    string name = 2;
    string company = 3;
    string email = 4;
    string password = 5;
}

message Request {}

message CreateResponse {
    bool created = 1;
    User user = 2;
}

message UserResponse {
    User user = 1;
}

message UsersResponse {
    repeated User users = 1;
}

message Token {
    string token = 1;
    bool valid = 2;
    repeated Error errors = 3;
}

message Error {
    int32 code = 1;
    string description = 2;
}