syntax = "proto3";

package go.micro.srv.vessel; 

service VesselService {
  rpc CreateVessel(Vessel) returns (CreateResponse) {}
  rpc FindAvailable(Specification) returns (VesselResponse) {}
}

message Vessel {
  string id = 1;
  int32 capacity = 2;
  int32 max_weight = 3;
  string name = 4;
  bool available = 5;
  string owner_id = 6;
}

message Specification {
  int32 capacity = 1;
  int32 max_weight = 2;
}

message CreateResponse {
  bool created = 1;
  Vessel vessel = 2;
}

message VesselResponse {
  Vessel vessel = 1;
}